--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -18,12 +18,12 @@
     "email": "Email",
     "password": "Password",
     "passErrorSignUp": "Use 8 characters or more for your password",
-    "onboarding1Title": "Welcome to the News App",
-    "onboarding1Body": "Stay ahead of the curve with News! Personalize your news feed, receive breaking news alerts, and explore a world of information at your fingertips",
-    "onboarding2Title": "Explore the World of News",
-    "onboarding2Body": "Customize your news experience by choosing your favorite topics. From global events to niche interests, our app covers it all.",
-    "onboarding3Title": "Stay Informed, Anywhere",
-    "onboarding3Body": "Access breaking news and save articles. Share and discuss with your community, and dive into a world of knowledge on the go.",
+    "onboarding1Title": "Welcome to the Carwash App",
+    "onboarding1Body": "Experience the ultimate convenience of professional car washing right at your doorstep. Book your wash effortlessly and enjoy a sparkling clean vehicle.",
+    "onboarding2Title": " Choose Your Wash",
+    "onboarding2Body": "Select the perfect wash package tailored to your needs. From basic cleaning to premium detailing, we've got you covered.",
+    "onboarding3Title": "Schedule Your Wash",
+    "onboarding3Body": "Pick a time and location that suits you best. Our skilled technicians will arrive promptly to provide a top-notch cleaning experience.",
     "discover": "Discover Hotest\nNews",
     "home": "Home",
     "search": "Search",
